# pharness

./: .gitignore  Cargo.toml  README.md  prompt.md
.claude/: launch.json
config/: pharness.example.toml
crates/pharness-api/: Cargo.toml
crates/pharness-api/src/: app.rs  dispatch.rs  dto.rs  main.rs  worker.rs  workspace.rs
crates/pharness-cli/: Cargo.toml
crates/pharness-cli/src/: main.rs
crates/pharness-config/: Cargo.toml
crates/pharness-config/src/: lib.rs
crates/pharness-core/: Cargo.toml
crates/pharness-core/src/: ids.rs  lib.rs
crates/pharness-core/src/agent/: cancellation.rs  mod.rs  runtime.rs  state.rs
crates/pharness-core/src/events/: bus.rs  mod.rs  schema.rs
crates/pharness-core/src/execution/: environment.rs  mod.rs  target.rs
crates/pharness-core/src/model/: action.rs  mod.rs  provider.rs  request.rs  response.rs  tool_spec.rs
crates/pharness-core/src/policy/: command_classifier.rs  mod.rs  safety_policy.rs
crates/pharness-core/src/resources/: artifact_ref.rs  mod.rs  resource_ref.rs
crates/pharness-core/src/tools/: capability.rs  cluster.rs  executor.rs  fs.rs  mod.rs  result.rs  shell.rs
crates/pharness-core/tests/: core_types.rs
crates/pharness-fireworks/: Cargo.toml
crates/pharness-fireworks/src/: client.rs  lib.rs  stream.rs  types.rs
crates/pharness-runhost/: Cargo.toml
crates/pharness-runhost/src/: lib.rs  preview.rs  prompt.rs
crates/pharness-store/: Cargo.toml
crates/pharness-store/migrations/: 0001_initial.sql  0002_run_result_json.sql  0003_pending_approval_payload.sql  0004_permission_grants.sql  0005_approval_run_scope.sql  0006_audit_events.sql  0007_approval_preview.sql  0008_observations.sql  0009_observation_resource_identity.sql  0010_incidents.sql  0011_remediation_plans.sql  0012_approval_gates.sql  0013_approval_gate_decisions.sql  0014_work_plans.sql  0015_work_plan_lifecycle.sql  0016_change_sets.sql  0017_pipeline_intents.sql  0018_deployment_intents.sql  0019_releases.sql  0020_registry_evidence.sql  0021_pipeline_contracts.sql  0022_deployment_contracts.sql  0023_work_items.sql  0024_work_item_work_plans.sql  0025_work_item_change_sets.sql
crates/pharness-store/src/: lib.rs  models.rs  sqlite.rs
crates/pharness-worker/: Cargo.toml
crates/pharness-worker/src/: main.rs
deploy/docker/: Dockerfile.runtime  Dockerfile.ui  nginx-ui.conf  nginx-ui.conf.template
deploy/helm/pharness/: Chart.yaml  values.yaml
deploy/helm/pharness/templates/: api.yaml  ingress.yaml  networkpolicy.yaml  tekton-e2e-fixture.yaml  ui.yaml  worker-rbac.yaml
docs/adr/: 0001-local-first-cluster-native.md
outputs/019e9987-5b86-7f61-9a92-d44938944382/presentations/pharness-meetup/: create_slides.mjs  profile-plan.txt
outputs/019e9987-5b86-7f61-9a92-d44938944382/presentations/pharness-meetup/layout/: slide-01.layout.json  slide-02.layout.json  slide-03.layout.json  slide-04.layout.json  slide-05.layout.json  slide-06.layout.json  slide-07.layout.json  slide-08.layout.json  slide-09.layout.json  slide-10.layout.json  slide-11.layout.json  slide-12.layout.json  slide-13.layout.json  slide-14.layout.json  slide-15.layout.json  slide-16.layout.json  slide-17.layout.json  slide-18.layout.json  slide-19.layout.json  slide-20.layout.json  slide-21.layout.json  slide-22.layout.json
outputs/019e9987-5b86-7f61-9a92-d44938944382/presentations/pharness-meetup/output/: artifact-build-manifest.json  pharness-meetup.pptx
outputs/019e9987-5b86-7f61-9a92-d44938944382/presentations/pharness-meetup/slides/: deck-utils.mjs  slide-01.mjs  slide-02.mjs  slide-03.mjs  slide-04.mjs  slide-05.mjs  slide-06.mjs  slide-07.mjs  slide-08.mjs  slide-09.mjs  slide-10.mjs  slide-11.mjs  slide-12.mjs  slide-13.mjs  slide-14.mjs  slide-15.mjs  slide-16.mjs  slide-17.mjs  slide-18.mjs  slide-19.mjs  slide-20.mjs  slide-21.mjs  slide-22.mjs
planning/: agent-harness-implementation-plan.md  agent-log-fireworks-tool-protocol.md  approval-gate-summaries.md  approval-gates.md  approval-summaries.md  approvals.md  audit-events.md  autonomous-coding-alpha-smoke-playbook.md  autonomous-sdlc-alpha.md  autonomous-sdlc-roadmap.md  cancellation.md  change-sets.md  config-loader.md  current-build-review.md  deployment-contracts.md  deployment-intent-smoke-playbook.md  deployment-intents.md  dogfood.md  e2e-smoke.md  executor-analysis.md  gitignore.md  incidents.md  kubernetes-coding-alpha-smoke-playbook.md  lgtm.md  live-smoke-results-2026-05-15.md  mcp-boundary.md  meetup-deck.md  observations.md  patch-file.md  permission-grants.md  pharness-demo-script-full.md  pharness-demo-script.md  pharness-meetup-slides.md  pharness-smoke-playbook.md  pipeline-contracts.md  pipeline-deployment-handoff.md  pipeline-intent-smoke-playbook.md  pipeline-intents.md  registry-alias.md  registry-evidence-smoke-playbook.md  (+29 more)
scripts/: pharness-build.sh  pharness-cluster-runtime-smoke.sh  pharness-e2e-smoke.sh  pharness-tekton-execution-smoke.sh
ui/: .npmrc  AGENTS.md  design-qa.md  package-lock.json  package.json  qa-comparison.html  vite.config.mjs
ui/public/: qa-comparison.html
ui/src/: App.jsx  pharnessApi.js  styles.css
