[workspace]
members = [
    "crates/pharness-api",
    "crates/pharness-cli",
    "crates/pharness-config",
    "crates/pharness-core",
    "crates/pharness-fireworks",
    "crates/pharness-runhost",
    "crates/pharness-store",
    "crates/pharness-worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/pharness"
rust-version = "1.80"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "json", "migrate", "macros"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2", features = ["serde"] }
