[package]
name = "pharness-api"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
pharness-core = { path = "../pharness-core" }
pharness-config = { path = "../pharness-config" }
pharness-fireworks = { path = "../pharness-fireworks" }
pharness-store = { path = "../pharness-store" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
