[package]
name = "pharness-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pharness-core = { path = "../pharness-core" }
pharness-fireworks = { path = "../pharness-fireworks" }
pharness-store = { path = "../pharness-store" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
