[package]
name = "pharness-runhost"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pharness-core = { path = "../pharness-core" }
pharness-fireworks = { path = "../pharness-fireworks" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
