[package]
name = "pharness-worker"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pharness-config = { path = "../pharness-config" }
pharness-core = { path = "../pharness-core" }
pharness-fireworks = { path = "../pharness-fireworks" }
pharness-runhost = { path = "../pharness-runhost" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
